[package]
name = "nurse"
description = "Help users nurse their programs back to heath"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["commonkestrel"]

[dependencies]
async-std = { version = "1.13.0", optional = true }
tokio = { version = "1.41.1", optional = true }
colored = "2.1.0"

[features]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
