[package]
name = "nurse"
description = "Help users nurse their programs back to heath"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["commonkestrel"]

[dependencies]
url = { version = "2.5.4", optional = true }
colored = { version = "2.1.0", optional = true }
async-std = { version = "1.13.0", optional = true }
tokio = { version = "1.41.1", optional = true }
lsp-types = { version = "0.97.0", optional = true }
slotmap = "1.0.7"

[features]
default = ["serial", "lsp"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
serial = ["dep:colored"]
lsp = ["dep:lsp-types", "dep:url"]

[[example]]
name = "serial"

[dev-dependencies]
logos = "0.14"

