[package]
name = "nurse"
description = "Help users nurse their programs back to heath"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["commonkestrel"]
rust-version = "1.78"
readme = "README.md"

[dependencies]
url = { version = "2.5.4", optional = true }
colored = { version = "2.1.0", optional = true }
tokio = { version = "1.41.1", features = ["io-util"], optional = true }
smol = { version = "2.0.2", optional = true }
lsp-types = { version = "0.97.0", optional = true }
slotmap = "1.0.7"
concat-idents = "1.1.5"

[features]
default = ["serial"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
serial = ["dep:colored"]
lsp = ["dep:lsp-types", "dep:url"]

[[example]]
name = "serial"

[dev-dependencies]
logos = "0.14"

